# audel

./: .gitignore  Audel_kickoff_plan.md  Dockerfile  README.md  TASKS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
brand/: DESIGN_SYSTEM.md  extra.css  social_audel.html  tokens.css
brand/space/: README.md  index.html
docs/: index.md  quickstart.md
src/audel/: __init__.py  __main__.py  config.py  errors.py  logging.py  mediaguard.py  netguard.py  proxy.py  workspace.py
src/audel/acoustic/: __init__.py  clap.py
src/audel/adapters/: __init__.py  _demo_assets.py  cli.py  doctor.py  mcp.py  rest.py
src/audel/backends/: __init__.py  anthropic_backend.py  base.py  gemini_audio.py  local.py  ollama.py  registry.py
src/audel/core/: __init__.py  analyze.py  capture.py  check.py  diff.py  generate.py  loop.py  render.py  stream.py  watch.py
src/audel/models/: __init__.py
src/audel/signals/: __init__.py  _parse.py  checks.py  measure.py
src/audel/speech/: __init__.py  asr.py  conformance.py
tests/: conftest.py
tests/unit/: test_adapters_mcp.py  test_analyze.py  test_check.py  test_check_brief.py  test_clap.py  test_conformance.py  test_generate.py  test_loop.py  test_parse.py  test_scaffold.py  test_security_analyze.py  test_security_asr.py  test_security_capture.py  test_security_media.py  test_security_proxy.py  test_security_rest.py  test_security_stream.py  test_security_workspace.py  test_stream.py  test_watch.py
