[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audel"
version = "0.1.0"
description = "Ears for AI Agents — a machine-graded audio feedback loop coding agents consume to self-correct before claiming done."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["ai", "agents", "audio", "speech", "asr", "llm", "voice", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
# Light core: shared contract + DSP/schema/CLI. Heavy ML/render deps live in extras and are
# lazy-imported, so `import audel` stays fast and torch-free.
dependencies = [
    "agentsensory>=0.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "typer>=0.12",
    "platformdirs>=4.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
render = ["playwright>=1.44"]
asr = ["faster-whisper>=1.0"]
cloud = ["anthropic>=0.40", "google-genai>=0.3", "httpx>=0.27"]
clap = ["transformers>=4.40", "torch>=2.2", "librosa>=0.10"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.2"]
all = [
    "playwright>=1.44", "faster-whisper>=1.0",
    "anthropic>=0.40", "google-genai>=0.3", "httpx>=0.27",
    "transformers>=4.40", "torch>=2.2", "librosa>=0.10",
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9", "mcp>=1.2",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/amitpatole/audel"
Repository = "https://github.com/amitpatole/audel"
Issues = "https://github.com/amitpatole/audel/issues"

[project.scripts]
audel = "audel.adapters.cli:main"
audel-mcp = "audel.adapters.mcp:main"
audel-serve = "audel.adapters.rest:main"

# Third-party backends register here: `audel-backend-foo` exposes an AudioBackend so
# `analyze(backend="foo")` resolves it.
[project.entry-points."audel.backends"]
local = "audel.backends.local:LocalBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/audel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# Typer puts callables in arg defaults by design (incl. list[str] options).
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
